CHANGELOG
	versions and changes are listed from latest(on top) to oldest

version<next>
	(*)added volume boost
	(*)update to ffmpeg 0.8.5
	(*)added vfpu optimizations to ffmpeg(dsputil)
	(*)fixed: possible crash when album art buffer cannot be allocated
	(*)fixed: cannot up one folder when select is pressed from list of drives
	(*)tags from asf(including wma) files are now read
	(*)tags are now encoded to ucs2 when opening files
			before, intrafont is encoding them per call to the print funciton
	(*)now displays album art with "image/jpg" mime type (well, specs says "image/jpeg")
	(*)added vfpu memcpy
	(*)added RnBridge.prx(my own kernel bridge)
	(*)added support for png album art
	(*)started rewrite of file browser code for unicode support
	(*)fixed: first scanline of album art is not being read
	(*)use sceIoDevctl to check for ms existence
			fixes crash when listing drives
			not tested on a PSPgo
	(*)added hold- module
			just a slightly modified version of hold+ that doesn't interfere with the cpu clock
			makes this app incompatible with hold+
	(*)added sync instruction after every writeback/invalidate of dcache
			fixes some missing texts and flickering images
	(*)mp4 cover art are now displayed, more to come(flac, etc...)
	(*)update taglib to 1.7(from 1.5)
	(*)error messages are now suppressed in hold mode, allows continous playback
	(*)added support for heaphone remote(untested)
	(*)fixed a bug that causes the cursor to exceed list in file browser
	(*)metadata is now rendered as UTF8(as it should be)
	(*)added option to set code page in settings.ini
	(*)added atrac3+ decoder in hardware(only RIFF and EA3 headers)
	(*)hardware decode aac from files with adts header(*.aac only)
	(*)update to ffmpeg 0.8.3
	(*)added atrac3 hardware decoder
	(*)large images are now fully displayed but with seams between 512*512 boundaries
	(*)images now use smaller buffers
			16pixel aligned width and height instead of powers of 2
	(*)albm art is now shown. no more black box.