@@ -4,9 +4,9 @@ CREDITS
 	cooleyes - examples on using sceAudiocodec
 	
 	hardhat, m0skito
-	consolespot.net
-	forums.dashhashs.com(forums.psp-hacks.com)
 	wololo.net/talk
+	forums.dashhashs.com(forums.psp-hacks.com)
+	consolespot.net
 	
 Libraries used
 	ffmpeg    - ffmpeg.org
